--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #111;
+  background-color: #f8f8f8;
   color: white;
 }
