--- a/app/src/styles/global.scss
+++ b/app/src/styles/global.scss
@@ -5,3 +5,20 @@ body {
   background-color: $bg-color;
   color: $text-color;
 }
+
+.page-container {
+  padding: 2rem;
+  
+  h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+    color: #2c3e50;
+    margin-bottom: 1rem;
+  }
+  
+  p {
+    font-size: 1.1rem;
+    color: #666;
+    line-height: 1.6;
+  }
+}
